# AI_app

./: .gitignore  Dockerfile  README.md  _wdog.py  beat.bash  cele.bash  docker-compose.yml  key.env  manage.py  pyproject.toml  reqs.txt  require_gen.py  requirements.txt  server.bash  test.py  ts_build.bash
AI_Backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
account/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
account/app_models/: cluster_models.py  photos.py
account/flag/: backend_authen.py  redis.py
account/forms/: login_form.py  register_form.py
account/management/commands/: _down_util.py  download_weight.py  runserver.py
account/migrations/: 0001_initial.py  0002_photo_status.py
account/project_utils/: _utils.py  account_utils.py  utils.py
account/tasks/: binding.py  face_task.py  obdet.py  ocr_task.py  tasks.py
face_recognition/: temp.py
face_recognition/face/: det_model.py  recog_model.py  ts_build.bash  ts_test.bash
face_recognition/face/util/: inference.py  visualize.py
face_recognition/face/util/model/: vgg.py
model/: configs.properties  test.py
model/face/: det_model.py  recog_model.py  ts_test.bash
model/face/util/: detect_utils.py  downloads.py  inference.py  lfw_eval.py  project_utils.py
model/face/util/configs/: recognition_model.yaml
model/object_detection/: detect_model.py
model/ocr/: ocr.py  ocr_model.py
projectA/projectA/: settings.py  urls.py
