[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "WODex_backend"
version = "0.1.0"
description = "WODex: ..."
authors = [
    { name="Victor-Ho", email="hovinhtuong210@gmail.com" }
]
readme = "README.md"
keywords = ["object_detection", "AI", "application_for_kids"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "Django==5.1",
    "djangorestframework==3.15.2",
    "djongo==1.3.6",
    "facenet_pytorch==2.6.0",
    "gdown==5.2.0",
    "joblib==1.4.2",
    "kombu==5.4.0",
    "lmdb==1.5.1",
    "matplotlib==3.9.2",
    "numpy==2.1.0",
    "Pillow==10.4.0",
    "pymongo==4.8.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "redis==5.0.8",
    "Requests==2.32.3",
    "rest_framework_simplejwt==0.0.2",
    "seaborn==0.13.2",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "ts==0.5.1",
    "ultocr==0.3.1",
    "ultralytics==8.2.83",
    "wheel==0.44.0",
]